added locale service for internationalization

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,1 +1,21 @@
-message.welcome=hello
+reply.meeting.group=Выберите группу
+reply.meeting.participants=Выберите участников
+reply.meeting.subject=Напишите тему встречи
+reply.meeting.duration=Напишите тему встречи
+reply.meeting.question=Введите вопросы, которые будут обсуждаться на встрече
+reply.meeting.date=Выберите дату
+reply.meeting.time=Выберите время
+reply.meeting.address=Напишите адрес где будет проводиться встреча
+reply.meeting.awaiting=Вы собираетесь создать встречу с этими участниками:\n{0}\n\
+  Тема для обсуждения:\n{1}\n\nОбсуждаемые вопросы встречи:\n{2}\n\
+  Общее ожидаемое время для запланированной встречи: \n{3} мин.\n\n\
+  Вы выбрали эти возможные интервалы для встречи:\n{4}\n\
+  Встреча пройдет по этому адресу:\n{5}
+reply.meeting.awaiting.participants=Ваш коллега {0} приглашает вас на встречу для обсуждения темы: \n{1}\n\n\
+  Обговариваемые вопросы:\n{2}\n\
+  Участники встречи:\n{3}\n\
+  Ожидаемая продолжительность: \n{4} мин.\n\n\
+  Выбранные интервалы времени:\n{5}\n\
+  Встреча пройдет по этому адресу:\n{6}
+reply.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
+  Как только это произойдет, встреча будет запланирована автоматически на один из выбранных интервалов.
