added bot state enitity and configured redis

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,7 +1,7 @@
 reply.meeting.group=Выберите группу
 reply.meeting.participants=Выберите участников
 reply.meeting.subject=Напишите тему встречи
-reply.meeting.duration=Напишите тему встречи
+reply.meeting.duration=Выбрите предполагаемую продолжительность темы в минутах
 reply.meeting.question=Введите вопросы, которые будут обсуждаться на встрече
 reply.meeting.date=Выберите дату
 reply.meeting.time=Выберите время
@@ -16,6 +16,8 @@ reply.meeting.awaiting.participants=Ваш коллега {0} приглашае
   Участники встречи:\n{3}\n\
   Ожидаемая продолжительность: \n{4} мин.\n\n\
   Выбранные интервалы времени:\n{5}\n\
-  Встреча пройдет по этому адресу:\n{6}
+  Встреча пройдет по этому адресу:\n{6}\n\n\
+  Нажмите <b><i>Изменить</i></b> чтобы указать в какое время Вы не можете присутствовать, <b><i>Отменить</i></b> \
+  если ни один из интервалов не подошел или <b><i>Подтверждаю</i></b> чтобы согласиться с любым из указанных дат.
 reply.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
   Как только это произойдет, встреча будет запланирована автоматически на один из выбранных интервалов.
