added send to all participants upcoming meeting

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -21,3 +21,11 @@ reply.meeting.awaiting.participants=Ваш коллега {0} приглашае
   если ни один из интервалов не подошел или <b><i>Подтверждаю</i></b> чтобы согласиться с любым из указанных дат.
 reply.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
   Как только это произойдет, встреча будет запланирована автоматически на один из выбранных интервалов.
+reply.meeting.confirmed.message=Отлично! Я сообщу как только точное время встречи будет определенно.
+reply.meeting.canceled.message=К сожалению, один из участников не может присутствовать на встрече в указанные интервалы времени.
+reply.meeting.canceled.participants.message=К сожалению, встреча, запланированная {0}, была отменена, \
+  так как один из участников не сможет присутствовать в указанные интервалы времени.
+reply.meeting.upcoming.all=Тема для обсуждения:\n{0}\n\nОбсуждаемые вопросы встречи:\n{1}\n\
+  Ожидаемая продолжительность: \n{2} мин.\n\n\
+  Участники встречи:\n{3}\n\
+  Встреча пройдет по этому адресу:\n{4}
