fixed hibernate bugs

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,11 +1,15 @@
-reply.meeting.group=Выберите группу
-reply.meeting.participants=Выберите участников
-reply.meeting.subject=Напишите тему встречи
-reply.meeting.duration=Выбрите предполагаемую продолжительность темы в минутах
-reply.meeting.question=Введите вопросы, которые будут обсуждаться на встрече
-reply.meeting.date=Выберите дату
-reply.meeting.time=Выберите время
-reply.meeting.address=Напишите адрес где будет проводиться встреча
+reply.meeting.group=Выберите <b>группу</b>, в которой состоят участники встречи, чтобы я мог определить их.
+reply.meeting.participants=Выберите <b>участников</b> для вашей встречи.\
+  \nВы можете убрать участника нажав на него еще раз.
+reply.meeting.subject=Пожалуйста, укажите <b>название</b> темы.
+reply.meeting.duration=Выберите предполагаемую <b>продолжительность темы</b> в минутах.
+reply.meeting.question=Пожалуйста, введите вопросы или цели встречи, которые будут обсуждаться.
+reply.meeting.date=Пожалуйста выберите <b>день</b> для встречи. \
+  Вы можете выбрать несколько дней и бот предложит \
+  день и время с лучшим соответствием для выбранных участников.
+reply.meeting.time=Отлично! Теперь добавьте <b>время</b> проведения встречи. \
+  Рекомендуется добавить 3-8 интервалов, чтобы среди участников было больше пересечений доступности.
+reply.meeting.address=Пожалуйста, введите <b>адрес</b> встречи, либо нажмите <b>далее</b> чтобы пропустить.
 reply.meeting.awaiting=Вы собираетесь создать встречу с этими участниками:\n{0}\n\
   Тема для обсуждения:\n{1}\n\nОбсуждаемые вопросы встречи:\n{2}\n\
   Общее ожидаемое время для запланированной встречи: \n{3} мин.\n\n\
@@ -20,11 +24,13 @@ reply.meeting.awaiting.participants=Ваш коллега {0} приглашае
   Нажмите <b><i>Изменить</i></b> чтобы указать в какое время Вы не можете присутствовать, <b><i>Отменить</i></b> \
   если ни один из интервалов не подошел или <b><i>Подтверждаю</i></b> чтобы согласиться с любым из указанных дат.
 reply.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
-  Как только это произойдет, встреча будет запланирована автоматически на один из выбранных интервалов.
+  Как только это произойдет, встреча будет запланирована автоматически на ближайшее время из выбранных интервалов.
 reply.meeting.confirmed.message=Отлично! Я сообщу как только точное время встречи будет определенно.
 reply.meeting.canceled.message=К сожалению, один из участников не может присутствовать на встрече в указанные интервалы времени.
-reply.meeting.canceled.participants.message=К сожалению, встреча, запланированная {0}, была отменена, \
+reply.meeting.canceled.participants=К сожалению, встреча, запланированная {0}, была отменена, \
   так как один из участников не сможет присутствовать в указанные интервалы времени.
+reply.meeting.canceled.match=К сожалению, встреча, запланированная {0}, была отменена, \
+  так как не удалось найти подходящего времени путем сопоставления.
 reply.meeting.upcoming.all=Тема для обсуждения:\n{0}\n\nОбсуждаемые вопросы встречи:\n{1}\n\
   Ожидаемая продолжительность: \n{2} мин.\n\n\
   Участники встречи:\n{3}\n\
