added timezone selection

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -1,21 +1,21 @@
-reply.meeting.group=Выберите <b>группу</b>, в которой состоят участники встречи, чтобы я мог определить их.
-reply.meeting.participants=Выберите <b>участников</b> для вашей встречи.\
+create.meeting.group=Выберите <b>группу</b>, в которой состоят участники встречи, чтобы я мог определить их.
+create.meeting.participants=Выберите <b>участников</b> для вашей встречи.\
   \nВы можете убрать участника нажав на него еще раз.
-reply.meeting.subject=Пожалуйста, укажите <b>название</b> темы.
-reply.meeting.duration=Выберите предполагаемую <b>продолжительность темы</b> в минутах.
-reply.meeting.question=Пожалуйста, введите вопросы или цели встречи, которые будут обсуждаться.
-reply.meeting.date=Пожалуйста выберите <b>день</b> для встречи. \
+create.meeting.subject=Пожалуйста, укажите <b>название</b> темы.
+create.meeting.duration=Выберите предполагаемую <b>продолжительность темы</b> в минутах.
+create.meeting.question=Пожалуйста, введите вопросы или цели встречи, которые будут обсуждаться.
+create.meeting.date=Пожалуйста выберите <b>день</b> для встречи. \
   Вы можете выбрать несколько дней и бот предложит \
   день и время с лучшим соответствием для выбранных участников.
-reply.meeting.time=Отлично! Теперь добавьте <b>время</b> проведения встречи. \
+create.meeting.time=Отлично! Теперь добавьте <b>время</b> проведения встречи. \
   Рекомендуется добавить 3-8 интервалов, чтобы среди участников было больше пересечений доступности.
-reply.meeting.address=Пожалуйста, введите <b>адрес</b> встречи, либо нажмите <b>далее</b> чтобы пропустить.
-reply.meeting.awaiting=Вы собираетесь создать встречу с этими участниками:\n{0}\n\
+create.meeting.address=Пожалуйста, введите <b>адрес</b> встречи, либо нажмите <b>далее</b> чтобы пропустить.
+create.meeting.awaiting=Вы собираетесь создать встречу с этими участниками:\n{0}\n\
   Тема для обсуждения:\n{1}\n\nОбсуждаемые вопросы встречи:\n{2}\n\
   Общее ожидаемое время для запланированной встречи: \n{3} мин.\n\n\
   Вы выбрали эти возможные интервалы для встречи:\n{4}\n\
   Встреча пройдет по этому адресу:\n{5}
-reply.meeting.awaiting.participants=Ваш коллега {0} приглашает вас на встречу для обсуждения темы: \n{1}\n\n\
+create.meeting.awaiting.participants=Ваш коллега {0} приглашает вас на встречу для обсуждения темы: \n{1}\n\n\
   Обговариваемые вопросы:\n{2}\n\
   Участники встречи:\n{3}\n\
   Ожидаемая продолжительность: \n{4} мин.\n\n\
@@ -23,18 +23,25 @@ reply.meeting.awaiting.participants=Ваш коллега {0} приглашае
   Встреча пройдет по этому адресу:\n{6}\n\n\
   Нажмите <b><i>изменить</i></b> чтобы указать в какое время Вы не можете присутствовать, если \
   ни один из интервалов не подошел - <b><i>отменить</i></b>, или <b><i>подтверждаю</i></b> чтобы согласиться с любым из указанных дат.
-reply.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
+create.meeting.sent.participants=Сообщение успешно отправлено. Сейчас мы ждем подтверждения от каждого участника. \
   Как только это произойдет, встреча будет запланирована автоматически на ближайшее время из выбранных интервалов.
-reply.meeting.confirmed.message=Отлично! Я сообщу как только точное время встречи будет определенно.
-reply.meeting.canceled.message=К сожалению, один из участников не может присутствовать на встрече в указанные интервалы времени.
-reply.meeting.canceled.participants=К сожалению, встреча, запланированная {0}, была отменена, \
+upcoming.meeting.confirmed.message=Отлично! Я сообщу как только точное время встречи будет определенно.
+upcoming.meeting.canceled.participants=К сожалению, встреча, запланированная {0}, была отменена, \
   так как один из участников не сможет присутствовать в указанные интервалы времени.
-reply.meeting.canceled.match=К сожалению, встреча, запланированная {0}, была отменена, \
+upcoming.meeting.canceled.match=К сожалению, встреча, запланированная {0}, была отменена, \
   так как не удалось найти подходящего времени путем сопоставления.
-reply.meeting.upcoming.send=Тема для обсуждения:\n{0}\n\nОбсуждаемые вопросы встречи:\n{1}\n\
+upcoming.meeting.confirmed.selected=Тема для обсуждения:\n{0}\n\nОбсуждаемые вопросы встречи:\n{1}\n\
   Ожидаемая продолжительность: \n{2} мин.\n\n\
   Участники встречи:\n{3}\n\
   Встреча пройдет по этому адресу:\n{4}
-reply.meeting.upcoming.all=Если хотите узнать подробности о встрече, просто нажмите на любую из списка.
-reply.meeting.upcoming.notexist=В данный момент у вас нет подтвержденных встреч.
-reply.meeting.ready=Отличные новости! Встреча, запланированная {0}, произойдет <b>{1}</b> по адресу <b>{2}</b>. Не опаздывайте :) 
+upcoming.meeting.confirmed.all=Если хотите узнать подробности о встрече, просто нажмите на любую из списка.
+upcoming.meeting.notexist=В данный момент у вас нет подтвержденных встреч.
+upcoming.meeting.confirmed.ready=Отличные новости! Встреча, запланированная {0}, произойдет <b>{1}</b> по адресу <b>{2}</b>. Не опаздывайте :) 
+upcoming.meeting.canceled.owner=К сожалению, встреча, запланированная на {0}, была отменена лидером {1}.
+upcoming.meeting.canceled.success=Встреча была успешно отменена. Участникам было отправлено уведомление.
+edit.meeting.subject=\n\n<b>Введите новое название темы чтобы изменить текущее.</b>
+edit.meeting.duration=\n\n<b>Выберите новую продолжительность темы.</b>
+edit.meeting.address=\n\n<b>Введите новый адрес встречи.</b>
+edit.meeting.participants=\n\n<b>Измените участников встречи нажав по клавиатуре ниже.</b>
+edit.meeting.questions=\n\n<b>Введите вопросы чтобы добавить их к текущей встрече. Чтобы удалить нажмите по клавиатуре ниже.</b>
+edit.meeting.time=\n\n<b>Выберите новое время.</b>
