added dto's and changed meeting service

--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -49,6 +49,11 @@ upcoming.meeting.confirmed.coming=Напоминаю, встреча на вре
 Перейдите в <b>предстоящие встречи</b> и установите свой статус на встречу.
 upcoming.meeting.notification.comment=Встреча, запланированная {0}, закончилась. \
   Пожалуйста, напишите <b>как прошла встреча</b> или <b>выделите основные фрагменты</b>, которые Вы подчеркнули на встрече.
+upcoming.meeting.ping.select=Выберите участника чтобы отправить уведомление.
+upcoming.meeting.ping.notification=Участники встречи, назначенной в {0}, уже собраны. Все ищут тебя! \
+Если не успеваешь, то установи свой статус кнопкой ниже.
+upcoming.meeting.ping.success=Участник {0} был успешно уведомлен. \
+  Следите за статусом участников во вкладке 'Предстоящие встречи'.
 
 #EDIT EVENT MEETING
 
